fix: align waitlist activity badge

--- a/css/activity.css
+++ b/css/activity.css
@@ -337,7 +337,7 @@
 }
 .tl-stamp-waitlisted {
   position: absolute;
-  right: 6%;
+  right: calc(6% + 12px);
   bottom: -10px;
   width: 46px;
   height: 46px;
